--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,133 @@
 ---
-title: 首頁
 layout: ./app/layout.ejs
 engine: ejs
-current: index
+title: 首頁
 ---
-
-<h1>
-  這是一段話
-</h1>
-
-<div class="box"></div>
+<section class="banner">
+    <div class="container  banner-content text-primary-dark">
+    <div class="text-primary-dark">
+        <p class="fs-9 fs-sm-4">Promise-Desert 2020 早春系列</p>
+        <h2 class="fs-16 fw-700 fs-sm-6">看得清，才能看得遠</h2>
+        <button class="btn-buy text-white">立即購買</button>
+    </div>
+   </div>
+</section>
+<main class="bg-white-smoke py-20">
+    <div class="container text-primary-dark ">
+        <h2 class="title mb-6 ">用專業的心，做專業的事</h2>
+        <ul class="flex flex-wrap gap-6">
+            <li class="feature-item">
+                <img src="./assets/images/home-section2-1.png" alt="price">
+                <h3>單一價格</h3>
+                <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+            </li>
+            <li class="feature-item">
+                <img src="./assets/images/home-section2-2.png" alt="pickup-time">
+                <h3>20 分鐘即可取件</h3>
+                <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
+            </li>
+            <li class="feature-item">
+                <img src="./assets/images/home-section2-3.png" alt="After-sales_service">
+                <h3>安心售後服務</h3>
+                <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+            </li>
+            <li class="feature-item">
+                <img src="./assets/images/home-sectioin2-4.png" alt="about-glasses">
+                <h3>關於鏡片</h3>
+                <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+            </li>
+        </ul>
+    </div>
+</main>
+<section class="container py-20 ">
+    <h2 class="title text-primary-dark mb-12">經典系列鏡框</h2>
+    <ul class="flex text-primary gap-6 items-center flex-md-col text-center">
+        <li class="series">
+            <a href="#">
+            <img src="./assets/images/home-section3-1.png" alt="optical">
+            OPTICAL</a>
+        </li>
+        <li class="series">
+             <a href="#"><img src="./assets/images/home-section3-2.png" alt="sunglasses">
+           SUNGLASSES</a>
+        </li>
+        <li class="series">
+            <a href="#">
+            <img src="./assets/images/home-section3-3.png" alt="functional">
+            FUNCTIONAL</a>
+        </li>
+    </ul>
+</section>
+<section class="co-branding">
+    <div class="container py-20 ">
+        <h2 class="text-white title mb-12">聯名設計鏡框</h2>
+        <ul class="flex d-md-block text-center ">
+            <li class="co-branding-item mb-md-6">
+                <img class="d-sm-none" src="./assets/images/home-section4-1.png" alt="doouble a+">
+                <img class="d-none d-sm-block" src="./assets/images/home-section4-1-sm.png" alt="doouble a+">
+                <p>DOUBLE A+</p>
+            </li>
+            <li class="co-branding-item">
+                <img class="d-sm-none" src="./assets/images/home-section4-2.png" alt="youth">
+                <img class="d-none d-sm-block" src="./assets/images/home-section4-2-sm.png" alt="youth">
+                <p>YOUTH</p>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="container py-20">
+    <h2 class="title text-primary-dark mb-6">顧客推薦</h2>
+    <ul class="flex flex-wrap gap-6">
+        <li class="customer">
+            <img src="./assets/images/home-section5-1.png" alt="customer">
+            <div class="customer-card">
+            <p class="name">Jessy</p>
+            <p>眼鏡品質優良，下次還會想來這邊購買！</p>
+            <p class="date">2021/06/20</p>
+            </div>
+        </li>
+        <li class="customer">
+            <img src="./assets/images/home-section5-2.png" alt="customer">
+            <div class="customer-card">
+            <p class="name">凱倫</p>
+            <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+            <p class="date">2021/04/18</p>
+            </div>
+        </li>
+        <li class="customer">
+            <img src="./assets/images/home-section5-3.png" alt="customer">
+            <div class="customer-card">
+            <p class="name">悠悠</p>
+            <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+            <p class="date">2020/12/25</p>
+            </div>
+        </li>
+        <li class="customer">
+            <img src="./assets/images/home-section5-4.png" alt="customer">
+            <div class="customer-card">
+            <p class="name">Kyuan</p>
+            <p>服務很好，品質沒有任何問題，非常喜歡。</p>
+            <p class="date">2020/10/31</p>
+            </div>
+        </li>
+    </ul>
+</section>
+<section class="bg-white-smoke">
+    <div class="input-container py-20">
+    <h2 class="title text-primary-dark mb-12 ">聯絡我們</h2>
+    <p class="fs-5 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+    <form class="#">
+        <label for="#">姓名<input type="text" placeholder="陳小明"></label>
+        <label for="#">聯絡電話<input type="text" placeholder="0912-345-678"></label>
+        <label for="#">電子郵件<input type="text" placeholder="example@email.com"></label>
+        <label for="#">意見反應<textarea placeholder="請輸入您的意見" cols="30" rows="5"></textarea></label>
+        <label class="flex items-center mb-12">
+        <input type="checkbox" value="agree" />
+        我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+        </label>
+        <label for="#">
+            <input type="button" value="確認送出" class="text-white py-4 mx-a fs-4 bg-primary fw-700">
+        </label>
+    </form>
+    </div>
+</section>
