--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@ layout: ./app/layout.ejs
 engine: ejs
 title: 首頁
 ---
+<main>
 <section class="banner">
     <div class="container  banner-content text-primary-dark">
     <div class="text-primary-dark">
@@ -12,7 +13,7 @@ title: 首頁
     </div>
    </div>
 </section>
-<main class="bg-white-smoke py-20">
+<section class="bg-white-smoke py-20">
     <div class="container text-primary-dark ">
         <h2 class="title mb-6 ">用專業的心，做專業的事</h2>
         <ul class="flex flex-wrap gap-6">
@@ -38,23 +39,23 @@ title: 首頁
             </li>
         </ul>
     </div>
-</main>
+</section>
 <section class="container py-20 ">
     <h2 class="title text-primary-dark mb-12">經典系列鏡框</h2>
     <ul class="flex text-primary gap-6 items-center flex-md-col text-center">
         <li class="series">
             <a href="#">
             <img src="./assets/images/home-section3-1.png" alt="optical">
-            OPTICAL</a>
+            <h3>OPTICAL</h3></a>
         </li>
         <li class="series">
              <a href="#"><img src="./assets/images/home-section3-2.png" alt="sunglasses">
-           SUNGLASSES</a>
+           <h3>SUNGLASSES</h3></a>
         </li>
         <li class="series">
             <a href="#">
             <img src="./assets/images/home-section3-3.png" alt="functional">
-            FUNCTIONAL</a>
+            <h3>FUNCTIONAL</h3></a>
         </li>
     </ul>
 </section>
@@ -65,23 +66,23 @@ title: 首頁
             <li class="co-branding-item mb-md-6">
                 <img class="d-sm-none" src="./assets/images/home-section4-1.png" alt="doouble a+">
                 <img class="d-none d-sm-block" src="./assets/images/home-section4-1-sm.png" alt="doouble a+">
-                <p>DOUBLE A+</p>
+                <h3>DOUBLE A+</h3>
             </li>
             <li class="co-branding-item">
                 <img class="d-sm-none" src="./assets/images/home-section4-2.png" alt="youth">
                 <img class="d-none d-sm-block" src="./assets/images/home-section4-2-sm.png" alt="youth">
-                <p>YOUTH</p>
+                <h3>YOUTH</h3>
             </li>
         </ul>
     </div>
 </section>
 <section class="container py-20">
     <h2 class="title text-primary-dark mb-6">顧客推薦</h2>
-    <ul class="flex flex-wrap gap-6">
+    <ul class="flex flex-wrap justify-center d-sm-block mx--gap">
         <li class="customer">
             <img src="./assets/images/home-section5-1.png" alt="customer">
             <div class="customer-card">
-            <p class="name">Jessy</p>
+            <h3 class="name">Jessy</h3>
             <p>眼鏡品質優良，下次還會想來這邊購買！</p>
             <p class="date">2021/06/20</p>
             </div>
@@ -89,7 +90,7 @@ title: 首頁
         <li class="customer">
             <img src="./assets/images/home-section5-2.png" alt="customer">
             <div class="customer-card">
-            <p class="name">凱倫</p>
+            <h3 class="name">凱倫</h3>
             <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
             <p class="date">2021/04/18</p>
             </div>
@@ -97,7 +98,7 @@ title: 首頁
         <li class="customer">
             <img src="./assets/images/home-section5-3.png" alt="customer">
             <div class="customer-card">
-            <p class="name">悠悠</p>
+            <h3 class="name">悠悠</h3>
             <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
             <p class="date">2020/12/25</p>
             </div>
@@ -105,7 +106,7 @@ title: 首頁
         <li class="customer">
             <img src="./assets/images/home-section5-4.png" alt="customer">
             <div class="customer-card">
-            <p class="name">Kyuan</p>
+            <h3 class="name">Kyuan</h3>
             <p>服務很好，品質沒有任何問題，非常喜歡。</p>
             <p class="date">2020/10/31</p>
             </div>
@@ -117,17 +118,16 @@ title: 首頁
     <h2 class="title text-primary-dark mb-12 ">聯絡我們</h2>
     <p class="fs-5 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
     <form class="#">
-        <label for="#">姓名<input type="text" placeholder="陳小明"></label>
-        <label for="#">聯絡電話<input type="text" placeholder="0912-345-678"></label>
-        <label for="#">電子郵件<input type="text" placeholder="example@email.com"></label>
-        <label for="#">意見反應<textarea placeholder="請輸入您的意見" cols="30" rows="5"></textarea></label>
-        <label class="flex items-center mb-12">
-        <input type="checkbox" value="agree" />
+        <label for="username">姓名<input type="text" placeholder="陳小明" name="username"></label>
+        <label for="usertel">聯絡電話<input type="text" placeholder="0912-345-678" name="usertel"></label>
+        <label for="uesremail">電子郵件<input type="text" placeholder="example@email.com" name="useremail"></label>
+        <label for="recommend">意見反應<textarea placeholder="請輸入您的意見" cols="30" rows="5" name="recommend"></textarea></label>
+        <label class="flex items-center mb-12" for="agree">
+        <input type="checkbox" value="agree" name="agree"/>
         我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
         </label>
-        <label for="#">
-            <input type="button" value="確認送出" class="text-white py-4 mx-a fs-4 bg-primary fw-700">
-        </label>
+        <input type="button" value="確認送出" class="text-white py-4 mx-a fs-4 bg-primary fw-700">
     </form>
     </div>
 </section>
+</main>
